--- a/aasportal.mdx
+++ b/aasportal.mdx
@@ -4676,7 +4676,7 @@ File System]]></value>
 - Static .aasx files organised in a folder (endpoint)]]></value>
   </value-owner>
   <value-owner id="q0je4tOT6U+Jt9BRkZ25Ng">
-   <value name="rendering">{&quot;bounds&quot;: &quot;652,671,307,50&quot;,&quot;model&quot;: &quot;nvq7J+QtYEWAUdAXIk4UEw&quot;,&quot;name&quot;: &quot;Comment2&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;652,671,307,50&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;657,676,287,32&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;- Templates\n- Static .aasx files organised in a folder (endpoint)&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;652,671,307,50&quot;,&quot;model&quot;: &quot;nvq7J+QtYEWAUdAXIk4UEw&quot;,&quot;name&quot;: &quot;Comment2&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;652,671,307,50&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;657,676,287,32&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;- Templates\r\n- Static .aasx files organised in a folder (endpoint)&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
    <value name="bounds">652,671,307,50</value>
   </value-owner>
   <value-owner id="dbJ2ZXplg0mFAqQrROtyuQ">
@@ -5556,7 +5556,7 @@ Tablet
 Mobile Phone]]></value>
   </value-owner>
   <value-owner id="1CSm1GLCakaeAQ7iHk+MCg">
-   <value name="rendering">{&quot;bounds&quot;: &quot;601,87,127,65&quot;,&quot;model&quot;: &quot;ZtMAiFX1j0aRRaff6X+9Nw&quot;,&quot;name&quot;: &quot;Comment3&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;601,87,127,65&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;606,92,76,48&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;PC\nTablet\nMobile Phone&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;601,87,127,65&quot;,&quot;model&quot;: &quot;ZtMAiFX1j0aRRaff6X+9Nw&quot;,&quot;name&quot;: &quot;Comment3&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;601,87,127,65&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;606,92,76,48&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;PC\r\nTablet\r\nMobile Phone&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
    <value name="bounds">601,87,127,65</value>
   </value-owner>
   <value-owner id="cuko9kb+bEaJBPGlJE2UdQ">
@@ -5568,7 +5568,7 @@ Mobile Phone]]></value>
    <value name="order">25</value>
   </value-owner>
   <value-owner id="g0jjnLiGUUycmsxOz0Rvzg">
-   <value name="rendering">{&quot;bounds&quot;: &quot;61,661,228,48&quot;,&quot;model&quot;: &quot;nNYTytmN+E6fRcW3SyzZfw&quot;,&quot;name&quot;: &quot;Text1&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;61,661,228,48&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;&lt;&lt;service&gt;&gt; : docker container\n&lt;&lt;image&gt;&gt; : docker image\n&lt;&lt;compose&gt;&gt; : docker multi-container&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;TextShapeView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;61,661,228,48&quot;,&quot;model&quot;: &quot;nNYTytmN+E6fRcW3SyzZfw&quot;,&quot;name&quot;: &quot;Text1&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;61,661,228,48&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;&lt;&lt;service&gt;&gt; : docker container\r\n&lt;&lt;image&gt;&gt; : docker image\r\n&lt;&lt;compose&gt;&gt; : docker multi-container&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;TextShapeView&quot;}</value>
    <value name="bounds">61,661,228,48</value>
    <value name="text"><![CDATA[<<service>> : docker container
 <<image>> : docker image
